# vector-mesh

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  Cargo.toml  README.md  RULES.md  TASKS.md
.github/workflows/: ci.yml
apps/embedding-service/: Cargo.toml  Dockerfile
apps/embedding-service/src/: main.rs
apps/ingestion-service/: Cargo.toml  Dockerfile
apps/ingestion-service/src/: main.rs
apps/query-service/: Cargo.toml  Dockerfile
apps/query-service/src/: adapters.rs  domain.rs  infrastructure.rs  main.rs  use_cases.rs
apps/shared-lib/: Cargo.toml
apps/shared-lib/src/: clients.rs  db.rs  domain.rs  error.rs  lib.rs  otel.rs
k8s/base/: namespace.yaml
k8s/databases/: ollama-deployment.yaml  qdrant-deployment.yaml  redis-headless-service.yaml  redis-statefulset.yaml  scylla-schema.cql  scylladb-headless-service.yaml  scylladb-statefulset.yaml
k8s/infrastructure/: apisix-route.yaml  jaeger.yaml  kustomization.yaml  otel-collector.yaml
k8s/infrastructure/apisix/: apisix.yaml
k8s/infrastructure/cert-manager/: cert-manager-controller.yaml  cluster-issuer.yaml
k8s/infrastructure/istio/: istiod.yaml  node-affinity.yaml  peer-authentication.yaml
k8s/services/: embedding-service.yaml  ingestion-service-virtualservice.yaml  ingestion-service.yaml  kustomization.yaml  query-service-virtualservice.yaml  query-service.yaml  vllm-deployment.yaml  vllm-service.yaml
k8s/services/argocd/: applicationset.yaml
scripts/: build-all-docker.sh
