[workspace]
members = [
    "apps/shared-lib",
    "apps/ingestion-service",
    "apps/embedding-service",
    "apps/query-service",
]
resolver = "2"

[workspace.dependencies]
# Core & Async
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Databases & Clients
scylla = "0.13"
redis = { version = "0.25", features = ["tokio-comp"] }
qdrant-client = "1.8"

# Connection Pooling (Performance Improvement)
deadpool = "0.12"
deadpool-redis = "0.14"
deadpool-qdrant = "0.3"
deadpool-scylla = "0.3"

# Testing (Testing Improvement)
tokio-test = "0.4"
mockall = "0.12"
rstest = "0.18"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
