[workspace]
members = [
    "apps/shared-lib",
    "apps/ingestion-service",
    "apps/embedding-service",
    "apps/query-service",
]
resolver = "2"

[workspace.dependencies]
# Core & Async
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }

# Databases & Clients
scylla = "1.7.0"
redis = { version = "1.3.0", features = ["tokio-comp"] }
qdrant-client = "1.18.0"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.27"
tower-http = { version = "0.6", features = ["trace"] }

# Connection Pooling (Performance Improvement)
deadpool = "0.12"
deadpool-redis = "0.14"
deadpool-qdrant = "0.3"
deadpool-scylla = "0.3"

# Testing (Testing Improvement)
tokio-test = "0.4"
mockall = "0.12"
rstest = "0.18"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
