[package]
name = "embedding-service"
version = "0.1.0"
edition = "2024"

[dependencies]
shared-lib = { path = "../shared-lib" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
redis = { version = "1.3.0", features = ["tokio-comp"] }
qdrant-client = "1.18.0"
