[package]
name = "ingestion-service"
version = "0.1.0"
edition = "2024"

[dependencies]
shared-lib = { path = "../shared-lib" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.8"
redis = { version = "1.3.0", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
