[package]
name = "shared-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
tracing = "0.1"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = "0.27"
scylla = "1.7.0"
redis = { version = "1.3.0", features = ["tokio-comp"] }
qdrant-client = "1.18"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
